tests/rosetta/out/Smalltalk/averages-mean-time-of-day.out
/tmp/averages-mean-time-of-day.st:8: parse error, expected ']'
